src/test/ui/never_type/impl_trait_fallback3.stderr
error: could not find defining uses
  --> $DIR/impl_trait_fallback3.rs:9:12
   |
LL | type Foo = impl T;
   |            ^^^^^^

error: aborting due to previous error

